@@ -32,3 +32,5 @@
 	* Added a logo in 'src/web/logo.png'.
 2016-01-26 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.5.1.
+2016-01-27 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented firmware updates via the web interface.
